--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&amp;display=swap" rel="stylesheet">
     
         <title>Konstr</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div class="wrapper">
